# Checkers

./: CMakeLists.txt  WinMain.cpp  settings.jsonc
Game/: Board.h  Config.h  Game.h  Hand.h  Logic.h
Models/: Move.h  Response.h
sdl2_image/include/SDL3_image/: SDL_image.h
